lab1/Test/L1-A-13-23.output
Error Type B at Line 2
Error Type B at Line 6
Error Type B at Line 7
Error Type B at Line 8
Error Type A at Line 12
Error Type B at Line 19
Error Type A at Line 23
Error Type B at Line 25
Error Type A at Line 28
Error Type B at Line 29
Error Type B at Line 31
Error Type A at Line 32
Error Type B at Line 33
Error Type B at Line 36
Error Type A at Line 44
